# AMUS

./: .gitignore  AGENTS.md  README.md  components.json  package.json  skills-lock.json  svelte.config.js  vite.config.js  vitest.config.ts  vitest.setup.ts
.github/aur/: PKGBUILD
.github/workflows/: publish-aur.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mini-player.json  popup.json
src-tauri/icons/: icon.icns
src-tauri/installer/nsis/: path.nsh
src-tauri/installer/wix/: main.wxs
src-tauri/migrations/: 001_initial_schema.sql  002_add_album_artist.sql  003_add_fetch_tracking.sql  004_add_playlist_cover_art.sql  005_add_user_queue_index.sql  006_alter_playback_history_source_type.sql
src-tauri/src/: artist_pic_fetcher.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  media_controls.rs  models.rs  scanner.rs  startup.rs  sync.rs
src-tauri/src/cli/: args.rs  client.rs  dispatch.rs  format.rs  mod.rs  paths.rs  protocol.rs  server.rs
src-tauri/src/engine/: engine.rs  mod.rs
src-tauri/src/player/: actor.rs  engine.rs  events.rs  mod.rs  playback.rs  queue.rs  source.rs
src/components/: Dialog.svelte  GlobalSearch.svelte  Header.svelte  Player.svelte  QueueView.svelte  QueueWindow.svelte  ScanProgress.svelte  ShortcutSettingsModal.svelte  Sidebar.svelte
src/components/icons/: Artist.svelte
src/components/shortcuts/: ShortcutSettingsModal.svelte
src/components/stats/: FavoriteTrendChart.svelte  FormatDistributionChart.svelte  HeatmapGrid.svelte  LibraryGrowthChart.svelte  ListeningTrendChart.svelte  PlaybackTimeline.svelte  StatCard.svelte  StreakCalendar.svelte  TimeframeSelector.svelte  TopAlbumsGrid.svelte  TopArtistsGrid.svelte  TopTracksTable.svelte
src/components/ui/: AlbumCard.svelte  AlbumRow.svelte  ArtistCard.svelte  Banner.svelte  Button.svelte  DisplayList.svelte  HorizontalScroll.svelte  Icon.svelte  LibraryCard.svelte  Marquee.svelte  Menu.svelte  MenuItem.svelte  PlayingVisualizer.svelte  PlaylistCard.svelte  PlaylistCoverArt.svelte  Slider.svelte  ToastPortal.svelte  ToggleCard.svelte  ToggleSwitch.svelte  TrackList.svelte  TrackListSmall.svelte
src/components/ui/Button/: CircleIconButton.svelte
src/components/ui/Card/: AlbumCard.svelte  ArtistCard.svelte  LibraryCard.svelte  PlaylistCard.svelte  TrackCard.svelte
src/components/ui/Dialog/: EditAlbumDialog.svelte  EditArtistDialog.svelte  EditPlaylistDialog.svelte
src/components/ui/Home/: AlbumsSection.svelte  ArtistsSection.svelte  Banner.svelte  HeroSection.svelte  TracksSection.svelte
src/components/ui/Menu/: ArtistsMenu.svelte  DropdownMenu.svelte  PlaylistMenu.svelte  TrackMenu.svelte
src/components/ui/ToggleCard/: index.ts
src/components/ui/ToggleSwitch/: index.ts
src/components/ui/button/: button.svelte
src/components/ui/chart/: chart-tooltip.svelte
src/components/ui/dialog/: dialog-content.svelte  dialog-title.svelte
src/components/ui/input/: input.svelte
src/components/ui/kbd/: kbd.svelte
src/components/ui/label/: label.svelte
src/components/ui/sonner/: sonner.svelte
src/lib/: commands.svelte.ts  data.svelte.ts  edit-helpers.ts  player.svelte.ts  player.test.ts  session.svelte.ts  settings.svelte.ts  settings.test.ts  shortcut-handler.svelte.ts  shortcuts.svelte.ts  shortcuts.test.ts  startup.svelte.ts  stats.svelte.ts  stats.test.ts  stores.svelte.ts  stores.test.ts  test-utils.ts  types.d.ts  update.svelte.ts  utils.test.ts  utils.ts
src/lib/components/: StartupError.svelte
src/lib/stores/: toast.svelte.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
src/routes/(main)/: +layout.svelte  +page.svelte
src/routes/(main)/settings/: +page.svelte
src/routes/miniplayer/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/styles/: fonts.css  main.css  theme.css
