[package]
name = "amus"
version = "0.1.0"
description = "Local  Music Player"
authors = ["you"]
edition = "2024"
rust-version = "1.95"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lofty = "0.21"
walkdir = "2.5"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
rand = "0.10.1"
reqwest = "0.13.4"
rodio = "0.22.2"
parsel = "0.16.0"
scraper = "0.27.0"
primp = "1.3.1"
sha2 = "0.11.0"
urlencoding = "2.1.3"
serde_json = "1.0.150"
hex = "0.4.3"
tauri-plugin-fs = "2"
serde = "1.0.228"
thiserror = "2.0.18"
rayon = "1.12.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
